init gps simulator

--- a/fleet-location-simulator/pom.xml
+++ b/fleet-location-simulator/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>spring-cloud-uber-vehicle-fleet</artifactId>
-        <groupId>chen's uber fleet project</groupId>
+        <groupId>chen-uber-fleet-project</groupId>
         <version>1.0.0-BUILD-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
